--- a/back/package.json
+++ b/back/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/BielMaxBR/projeto-com-framework#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "nodemon": "^2.0.6",
